--- a/ci.yml
+++ b/ci.yml
@@ -41,3 +41,8 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint
+    $ git status
+...see what has changed
+$ git add .github
+$ git commit -m "Add CI workflow for running eslint"
+$ git push origin main
