--- a/ci.yml
+++ b/ci.yml
@@ -46,3 +46,5 @@ jobs:
 $ git add .github
 $ git commit -m "Add CI workflow for running eslint"
 $ git push origin main
+
+const unneededVariable = 'This variable is never used';
